--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "postinstall": "ng build --aot -prod",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -28,12 +29,14 @@
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@angular/cli": "^9.1.1",
+    "@angular/compiler-cli": "^9.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
-    "@angular/cli": "~9.1.0",
-    "@angular/compiler-cli": "~9.1.0",
+    "@angular/cli": "^9.1.1",
+    "@angular/compiler-cli": "^9.1.2",
     "@angular/language-service": "~9.1.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
