--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "jquery": "^3.5.0",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-loading": "^8.0.0",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
